removed unnecessary @Autowired and commented code